--- a/main.css
+++ b/main.css
@@ -1,3 +1,16 @@
+a {
+  color: #ec9a54;
+}
+
+a:hover {
+  color: #ec9a54;
+}
+
+#profile {
+  margin: 10px;
+  border-radius: 25px;
+}
+
 .nav a {
   color: #5a5a5a;
   font-size: 11px;
@@ -15,11 +28,12 @@
   background-color: #f7f7f7;
 }
 .jumbotron {
-  background-color: #2852A6/*#555753*/;
-  height: 300px;
+  background-color: #ec9a54;
+  height: 192px;
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
+  border-radius: 16px;
 }
 
 .jumbotron .container {
@@ -28,12 +42,18 @@
 }
 
 .jumbotron h1 {
-  color: #fff;
   font-size: 48px;  
   font-family: 'Titillium Web', sans-serif;
   font-weight: bolder;
+  text-shadow: 0 0 0;
 }
 
+.jumbotron p {
+  text-shadow: 0 0 0;
+  font-size: 20px;
+  font-family: 'Lato', sans-serif;
+  margin-bottom: -1px;
+}
 .aboutme p {
   font-size: 14
 }
@@ -42,15 +62,7 @@
   padding: 0px;
 }
 
-.jumbotron p {
-  font-size: 20px;
-  color: #fff;
-  font-family: 'Lato', sans-serif;
-  margin-bottom: -1px;
-}
-
 .profiles {
-    background-color: #f7f7f7;
     border-top: 1px solid #dbdbdb;
 }
 
@@ -60,9 +72,18 @@
     text-align: center;
 }
 
+.profiles h3 {
+    text-align: center;
+    margin-top: 0px;
+}
+
 .profiles p {
     font-size: 14px;
     margin-bottom: 15px;
     margin-top: 0px;
     text-align: center;
+}
+
+html {
+    margin: 16px;
 }
