Add js functions, rename css, update Makefile
* Add Javascript functionality to swap site parts
* Rename main.css to index.css
* Add .js generation to Makefile to update assets
* Change links to open in new tab
* Change some styling

--- a/index.css
+++ b/index.css
@@ -84,6 +84,13 @@ a:hover {
     text-align: center;
 }
 
+#content img {
+    width: 160px;
+    height: 144px;
+    margin: 2px;
+    border-radius: 8px;
+}
+
 html {
     margin: 16px;
 }
